<resources>
    <string name="app_name">HNG 6.0</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="_email">Email</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="or">OR</string>
    <string name="sign_in">Sign In</string>
    <string name="chernobyl">Chernobyl</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="setting_up_your_account">Setting Up your account. Please wait...</string>
</resources>
